--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
         <item>"Most Popular"</item>
         <item>"Highest Rated"</item>
     </string-array>
-    <string name="pref_sort_order">"Highest Rated"</string>
+    <string name="pref_sort_order">"Most Popular"</string>
 </resources>
