--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
 <resources>
+    <string name="api_key">REPLACE WITH API KEY</string>
     <string name="app_name">CinePhilia</string>
     <string name="action_settings">Settings</string>
     <string name="refresh_button">Refresh</string>
     <string name="sort_order">Sort</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_user_settings">UserSettings</string>
+    <string name="userRatings">User Ratings</string>
+    <string name="voteCount">Votes</string>
+    <string name="releaseDate">Released</string>
     <string-array name="pref_sort_keys">
         <item>"Most Popular"</item>
         <item>"Highest Rated"</item>
