--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,15 @@
     <string-array name="pref_sort_keys">
         <item>"Most Popular"</item>
         <item>"Highest Rated"</item>
+        <item>"Show Favorites"</item>
     </string-array>
     <string-array name="pref_sort_values">
         <item>"Most Popular"</item>
         <item>"Highest Rated"</item>
+        <item>"Show Favorites"</item>
     </string-array>
+    <string name="favorites">"Show Favorites"</string>
     <string name="pref_sort_order">"Most Popular"</string>
     <string name="full_image_desc">This is full screen image of the movie </string>
+    <string name="notOnline">Not Connected to the Internet</string>
 </resources>
